fix procedures z-index

--- a/homework-1/styles/styles.css
+++ b/homework-1/styles/styles.css
@@ -257,25 +257,27 @@ nav a:hover {
     margin-bottom: 49px;
 }
 .procedures article {
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 1.18182;
-    text-align: center;
-    color: #fff;
-    border-radius: 120px 4px;
+    display: flex;
+    border-radius: 4px 120px;
     width: 344px;
     height: 456px;
     background: linear-gradient(180deg, rgba(1, 28, 68, 0) 47.4%, rgba(1, 28, 68, 0.73) 82.66%, #011c44 99.06%);
-    display: flex;
-    align-items: end;
-    justify-content: center;    
+    align-items: flex-end;
+    justify-content: center;     
+}
+.procedures h3 {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 1.18;
+    text-align: center;
+    color: var(--brand-color-secondary);
+    margin: 0 0 32px 0;
+    max-width: 152px;
 }
 .procedures img {
     position: absolute;
-}
-.procedures h3 {
-    margin: 0;
+    z-index: -1;
 }
 /* section with contacts map and feedback form */
 .find_us {
